<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:layout_gravity="center_horizontal|center_vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/result"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="2"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal|center_vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="90sp"
                android:textSize="60sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/tv_name_matrix"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="130sp"
                android:textColor="@color/zenit"
                android:text="@string/tv_sign_Matrix"
                />

        </LinearLayout>

        <LinearLayout
             style="@style/LinearLayout_Result_page"
            android:layout_marginStart="10dp"
            >

            <TextView
                android:id="@+id/tv00"
               style="@style/TextView_Result_Page"
                />

            <TextView
                android:id="@+id/tv10"
                style="@style/TextView_Result_Page"
                />

            <TextView
                android:id="@+id/tv20"
                style="@style/TextView_Result_Page"
                />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayout_Result_page"
            >

            <TextView
                android:id="@+id/tv01"
                style="@style/TextView_Result_Page"
                />

            <TextView
                android:id="@+id/tv11"
                style="@style/TextView_Result_Page"
                />

            <TextView
                android:id="@+id/tv21"
                style="@style/TextView_Result_Page"
                />

        </LinearLayout>

        <LinearLayout
           style="@style/LinearLayout_Result_page"
            >

            <TextView
                android:id="@+id/tv02"
                style="@style/TextView_Result_Page"
                />

            <TextView
                android:id="@+id/tv12"
                style="@style/TextView_Result_Page"
                />

            <TextView
                android:id="@+id/tv22"
                style="@style/TextView_Result_Page"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="130sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/zenit"
            android:text="@string/tv_sign_Matrix2"
            />

    </LinearLayout>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/barca"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:text="@string/back"
        />


</LinearLayout>